# anyrouter-proxy

./: .gitignore  README.md  README_zh.md  main.py  model_tester.py  proxy_config.example.json  pyproject.toml
docs/: xcode-integration.md  交接.md  部署.md
linux/: anyrouter-proxy.service  install.sh  run.sh  status.sh  uninstall.sh
macos/: com.anyrouter.proxy.plist  install.sh  run.sh  status.sh  uninstall.sh
