[project]
name = "anyrouter-proxy"
version = "0.1.0"
description = "A proxy tool that proxy request to upstream."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "click==8.3.2",
    "colorama==0.4.6",
    "curl-cffi==0.15.0",
    "fastapi==0.136.0",
    "h11==0.16.0",
    "idna==3.11",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "pycparser==3.0",
    "pydantic==2.13.2",
    "pydantic-core==2.46.2",
    "pygments==2.20.0",
    "python-multipart==0.0.26",
    "rich==15.0.0",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.44.0",
]
